--- a/about.html
+++ b/about.html
@@ -68,9 +68,7 @@
     <section class="services__second" data-aos="fade-right">
         <h1 class="huge text-shadow">The <span class ="gradient">Six Figure</span> Team</h1>
         <div class="services__second__wrapper container">
-        <h4 class="second__content light text__shadow">Et expedita voluptatem facilis culpa ipsa. Cupiditate minima at doloribus veritatis sit commodi ducimus doloribus et. Odio repudiandae iure ipsum commodi ratione qui earum dolores et. Ea natus quos.
-            Voluptates facilis labore quae. Aut qui rerum ducimus. Repellat molestiae quia soluta at. Iure eius saepe enim inventore. Rerum dolor eum similique accusantium ut quisquam similique nihil. Aut ea sunt amet earum et nostrum dolore facilis.
-            Perspiciatis dignissimos deserunt similique dolore non id odit. Quo expedita facilis quibusdam quae a consequatur autem ea nobis. Necessitatibus temporibus inventore deserunt.</h4>
+        <h4 class="second__content light text__shadow">Teamwork really is everything. Based in South Florida, our team works day in and day out to attain more clients and please our current ones. We view every project as an opportunity to gain experience and credibility. Founded in 2021, our young age allows us to have a more personal connection with our clients. With most of our team members reigning from the greater Fort Lauderdale area, we have a great understanding of your competition. We take the necessary steps to make your website stand out. Every. Single. Time.</h4>
         </div>
     </section>
 
@@ -170,14 +168,14 @@
 
             <div class="founder__info">
                 <h3 id="founder__first-name">Mitchell Stahl</h3>
-                <p class = "light">Computer Science, BS</p>
+                <p class = "light">BS, Computer Science</p>
             </div>
             <div class="founder__img">
                 <img src="FounderPic.jpg" alt="">
 
             </div>
             <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, illum, culpa minima sapiente maxime eos aspernatur soluta quidem aperiam perferendis veniam vero neque nobis aliquid!<span class="gradient founder-quote">”</span></h4>
+                <h4 class ="light"><span class="gradient founder-quote">“</span>At the core of it, I just love building things. When I was thinking about the concept for Six Figure Labs, I knew it would be a perfect way for me to build products and learn at the same time.<span class="gradient founder-quote">”</span></h4>
             </div>
 
 
@@ -188,14 +186,14 @@
 
             <div class="founder__info">
                 <h3 id="founder__first-name">Tyler Mox</h3>
-                <p class = "light">Computer Science, BS</p>
+                <p class = "light">BS, Computer Science</p>
             </div>
             <div class="founder__img">
                 <img src="TylerFounder.jpg" alt="">
 
             </div>
             <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium perferendis modi dolorum asperiores, eaque amet unde nostrum et quidem deserunt ipsum minima beatae pariatur. Provident.<span class="gradient founder-quote">”</span></h4>
+                <h4 class ="light"><span class="gradient founder-quote">“</span>A big thing for me is innovation. I’m always thinking about the next big thing and how I can try to create that. My goal is to eventually build this into a hub for innovative software products.<span class="gradient founder-quote">”</span></h4>
             </div>
     </div>
 
@@ -215,8 +213,7 @@
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                     <h2 class = "call__heading">Want a free consultation?</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
-                        minus!
+                    <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
                     </h4>
                     <div class="email-container">
                     <input type="email" name="Email" id="email-call" placeholder="Email">
