--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p class="huge text-shadow">Welcome to the <br> next generation of <br> website <span
                     class="auto-type"></span>
             </p>
-            <h4 class="second__content light text-shadow">We believe websites are the most powerful online marketing tool. Through UX and marketing strategies, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
+            <h4 class="second__content light text-shadow">Through UX and marketing strategies, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
 
             <a href="./about.html" class="btn-gradient hvr-grow shadow magic-hover magic-hover__square">
                 <div class="btn__text">
@@ -231,14 +231,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5> Each and every project is unique and requires a different amount of time to complete. After careful analysis of your company, we figure out exactly what is needed and formulate a project brief. Our briefs contain a comprehensive timeline and blueprint, so you can easily follow us every step of the way. Although every project is unique, our turnaround time is usually between two and four weeks. </h5>
                     </div>
                 </div>
             </div>
@@ -251,14 +244,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5> Our goal is to make your life as easy and efficient as possible, that’s why we handle all the changes. Once the website is completed, any edit, feature, and styling change will be made by us. We know changes often need to be taken into effect immediately. Our team gets instant text alerts whenever a change is requested, and we prioritize your modification in order to make it live as fast as possible. </h5>
                     </div>
                 </div>
             </div>
@@ -271,14 +257,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5>We know there are many no code web creators out there, and choosing Six Figure Labs may not be the most obvious decision. Our designers and developers are experts in the field, no code solutions are not. We believe websites are not just for putting your company on the internet, they are powerful marketing tools that need a strategy behind them. Our team not only creates the site, but we develop that strategy.</h5>
                     </div>
                 </div>
             </div>
@@ -291,14 +270,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5> There is no one size fits all design for your company. Every website serves a different purpose and therefore needs a unique design and strategy plan to best suit those needs. From buttons to images, every element is there for a reason, whether that be to get more clients for a law firm, or to sell chocolate bars. Only a custom design with an award winning UX strategy can truly drive sales and engagement.</h5>
                     </div>
                 </div>
             </div>
@@ -311,14 +283,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5>We charge based on the length and complexity of the project. Unlike many web development agencies that have a minimum price, we accept any project. The average rate for a project is between $500 and $5000, depending on what’s needed. We will always give you the best price possible. Too expensive? We will work with you.</h5>
                     </div>
                 </div>
             </div>
@@ -331,14 +296,7 @@
                 </div>
                 <div class="accordion__item__body">
                     <div class="accordion__item__body--content">
-                        <h5> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quae officia in odio
-                            mollitia blanditiis nesciunt, iusto expedita obcaecati, esse reiciendis assumenda
-                            perferendis
-                            minima repudiandae eius voluptates nihil consequuntur architecto quam dolorem id error.
-                            Consequatur voluptates eligendi porro repellat, vitae impedit dolorem perferendis
-                            delectus
-                            et,
-                            unde iste ab incidunt fugiat? </h5>
+                        <h5>No, you do not need to provide all the content. However, that will speed up the process. We will provide you with digital graphics free of charge, this includes icons, isometric images, and any other graphic design you need. Once we begin the design process, we’ll send you a list of everything we need. If you don’t have the material, we’ll work with you to create it, whether that be content, images, or graphics.</h5>
                     </div>
                 </div>
             </div>
@@ -355,7 +313,7 @@
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                     <h2 class = "call__heading">Want a free consultation?</h2>
-                    <h4>We’d love to get a feel for your business and answer any questions, let’s get to work!
+                    <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
                     </h4>
                     <div class="email-container">
                     <input type="email" name="Email" id="email-call" placeholder="Email">
