--- a/our-work.html
+++ b/our-work.html
@@ -129,8 +129,7 @@
                 <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                 <h2 class = "call__heading">Want a free consultation?</h2>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
-                    minus!
+                <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
                 </h4>
                 <div class="email-container">
                 <input type="email" name="Email" id="email-call" placeholder="Email">
