--- a/services.html
+++ b/services.html
@@ -69,8 +69,7 @@
         <div class="services__second__wrapper container">
 
         <h1 class="huge text-shadow">The <span class ="gradient">Ultimate</span> Development Suite</h1>
-        <h4 class="second__content light text__shadow">Provident voluptatem necessitatibus nihil. Illum optio ducimus at quae optio. Et quaerat enim aspernatur repudiandae aliquid quia.
-            Ad quasi omnis quis. Est quis magni dolores dolorem tempora. Qui nesciunt occaecati dolorem quia. Qui dignissimos dolorem.</h4>
+        <h4 class="second__content light text__shadow">From design to development, we do it all. Our team carefully picks and chooses the best technologies for your business. Communication is key. We work together to create effective websites that actually help your brand grow.</h4>
         </div>
     </section>
 
@@ -84,9 +83,7 @@
                         <h4 class="gradient">Branding</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>Our team creates a distinctive style for your business, giving your website a recognizable look and feel in order to create engagement. This includes logo creation, color psychology, typography, and more.
                         </h5>
                     </div>
                 </div>
@@ -98,9 +95,7 @@
                         <h4 class="gradient">Web Design</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipici
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>Wireframes and prototypes are designed according to your wants and needs. Utilizing our UX strategy we mockup the most effective version of your site, and keep you updated every step of the way.
                         </h5>
                     </div>
                 </div>
@@ -112,9 +107,7 @@
                         <h4 class="gradient">Web Development</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>Using the newest technologies, we make sure your site is responsive, fast, and engineered to reach as many users as possible. Our development team will maintain your site and ensure it's always running smoothly.
                         </h5>
                     </div>
                 </div>
@@ -126,9 +119,7 @@
                         <h4 class="gradient">UX Implementation</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>We engineer our websites in such a way that your users interact with the site exactly as intended. The main UX factors we take into consideration are utility, ease of use, and efficiency. Our team learns about your goals, and uses UX to execute.
                         </h5>
                     </div>
                 </div>
@@ -140,9 +131,7 @@
                         <h4 class="gradient">SEO</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>A quality search engine configuration ties all our services together, allowing your website to reach your intended audience. We believe that successful SEO starts with the source code of your website. Every project is created with this in mind.
                         </h5>
                     </div>
                 </div>
@@ -154,9 +143,7 @@
                         <h4 class="gradient">Backend Development</h4>
                     </div>
                     <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
+                        <h5>From form endpoints to M.E.R.N applications, we create what your company needs to thrive. We love a challenge and have the skills, tools, and grit to get the job done. 
                         </h5>
                     </div>
                 </div>
@@ -266,8 +253,7 @@
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                     <h2 class = "call__heading">Want a free consultation?</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
-                        minus!
+                    <h4>We'd love to get a feel for your business and answer any questions, let's get to work!
                     </h4>
                     <div class="email-container">
                     <input type="email" name="Email" id="email-call" placeholder="Email">
